<resources>
    <string name="app_name">Superwiki</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">SuperWiki</string>
    <string name="login">Login</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_fight">FightActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_fight">Fight</string>
    <string name="menu_info">Info</string>
    <string name="menu_logout">Logout</string>


    <string name="login_title">Login</string>
    <string name="login_username">Username:</string>
    <string name="login_password">Password:</string>
    <string name="login_loginButton">Login</string>
    <string name="login_registerButton">Create an Account</string>

    <string name="register_title">Register</string>
    <string name="register_username">Username:</string>
    <string name="register_password">Password:</string>
    <string name="register_passwordReapeat">Repeat password:</string>
    <string name="register_registerButton">Register</string>
    <string name="register_loginButton">I Already have an account</string>

    <string name="made_by">
        This app was made by Din Vanvewezemael, Ali Kiyak and Wesley Monten
    </string>
    <string name="info">
        With the Super Wiki you can store your favorite superheroes and find out which one would win in a fight!
    </string>
    <string name="titlesearch">Search</string>
    <string name="titlefight">Fight!</string>
    <string name="titlefavorite">Favorites</string>
    <string name="firstcharacter">First character</string>
    <string name="secondcharacter">Second character</string>
    <string name="secondcharactershort">Second charact.</string>
    <string name="authorstitle">Authors</string>
    <string name="appinfotitle">App info</string>
    <string name="winnertitle">Winner!!!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
