<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LoginActivity"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="30sp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/poppins"
            android:layout_gravity="center"
            android:layout_marginTop="40px"
            />

        <TextView
            android:id="@+id/usernameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_username"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/poppins"
            android:layout_gravity="left"
            android:layout_marginTop="25dp"
            />
        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            style="@style/Widget.AppCompat.EditText"
            android:backgroundTint="@color/white"
            android:maxLines="1"
            android:inputType="text"
            >
        </EditText>


        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_password"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/poppins"
            android:layout_gravity="left"
            android:layout_marginTop="25dp"
            />
        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            style="@style/Widget.AppCompat.EditText"
            android:backgroundTint="@color/white"
            android:maxLines="1"
            android:inputType="textPassword"
            >


        </EditText>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/login_loginButton"
            android:background="@color/yellowAccent"
            android:layout_marginTop="25dp"
            android:textSize="20dp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:onClick="login"
            />

        <Button
            android:id="@+id/goToRegisterButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/login_registerButton"
            android:background="@color/white"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center"
            android:onClick="goToRegister"
            />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>