<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/titlefight"
            android:textColor="@color/white"
            android:textSize="50dp"
            android:fontFamily="@font/poppins"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstcharacter"
            android:textColor="@color/white"
            android:textSize="32dp"
            android:fontFamily="@font/poppins"
            android:layout_marginLeft="30dp"/>

        <Spinner
            android:id="@+id/characterspinner1"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:drawSelectorOnTop="true"
            android:background="@color/white"
            android:layout_marginHorizontal="25dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="V.S"
            android:fontFamily="@font/poppins"
            android:textSize="35dp"
            android:layout_gravity="center"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/secondcharacter"
            android:textColor="@color/white"
            android:textSize="32dp"
            android:fontFamily="@font/poppins"
            android:layout_marginLeft="30dp"/>

        <Spinner
            android:id="@+id/characterspinner2"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:drawSelectorOnTop="true"
            android:background="@color/white"
            android:layout_marginHorizontal="25dp"
            />

        <Button
            android:id="@+id/fightbutton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:text="@string/titlefight"
            android:background="@color/yellowAccent"
            android:textSize="25dp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/white"
            android:layout_gravity="center"
            />

    </LinearLayout>

</FrameLayout>